2.0.8
  - bugfix: XML element tag name in weather.py AccuWeather response now
    includes namespace
  - bugfix: Refresh screen error in msgarea.py
2.0.7
  - bugfix: ValueError in profile.py for setting bad timeout value
  - bugfix: ASCII colly diz with extended chars was causing an error
  - bugfix: KeyError in hackernews.py
  - deprecation: the "extras" subfolder of default script has been
    moved to https://github.com/x84-extras

  (version 2.0.6 was not released to pypi)

2.0.5
  - bugfix: UnicodeDecodeError when quoting some messages
  - bugfix: '__uploads__' folder not hidden by sftp as intended
2.0.4
  - bugfix: sesame did not honor want_cols/rows when
    the given terminal size was already of its exact
    dimensions.
2.0.3
  - bugfix: import common.py as relative from main.py
2.0.1
  - bugfix: did not include default 'top' art
  - bugfix: could not press 'return' to continue in sesame
2.0.0
  - you will need to ensure to set 'enabled = yes' for the shroo-ms api,
    previously this was enabled if the section alone existed
  - you will need to change the values of `newcmds', `anoncmds',
    and 'byecmds' of section [matrix] to be comma-delimited,
    not space-delimited as before. Similarly, you must also change
    value of 'invalid_handles' in section [nua].
  - the meaning of [system] option 'termcap-ansi', when not valued 'no', now
    coerces any reported terminal types *beginning* with 'ansi' to
    the target type.
  - fail2ban is enabled by [fail2ban] option 'enabled = yes'. Previously,
    the mere existence of section [fail2ban] was sufficient.
  - *new* option, 'anoncmds' in section 'matrix', where previously only
    the 'anonymous' user was a legitimate synonym, you may now provide
    many different ones -- humorously, you could provide 'root'.
  - *new* option, 'script_ssh' in section 'matrix', points to a new
    login matrix script that takes new keyword arguments, 'anonymous',