@@ -2,6 +2,9 @@
   - bugfix: XML element tag name in weather.py AccuWeather response now
     includes namespace
   - bugfix: Refresh screen error in msgarea.py
+  - workaround: always force refresh on event 'gosub' as terminal clients
+    such as syncterm, netrunner, and etherterm do not support the
+    "alt screen" sequence well, or at all.
 2.0.7
   - bugfix: ValueError in profile.py for setting bad timeout value
   - bugfix: ASCII colly diz with extended chars was causing an error
